2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

        * misc/pandora_file.cc: fixed error that caused double free.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

        * misc/pandora_file.cc: fixed unclosed directory with function closedir
	and control posible delete errors.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/util/unzip.exe: Added to bin/utils to use it to unzip 
	collections.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added functionality
	to get collection from configuration file.
        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
	support for unzip collections.

2010-07-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added functionality
	to get collection from configuration file.
        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
	support for manage collections.

2010-07-09  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/configure.in, Makefile.am: Modified to compile executable with
	version information embedded

	* win32/versioninfo.rc: Added version information file for win32 
	executable
	Fixes: #3007874

2010-07-07  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_windows_service.h: Added constant for default port for
	ftp and ssh 
	
	* win32/pandora_windows_service.cc: Added support for change ssh and ftp
	port

2010-07-05  Junichi Satoh  <junichi@rworks.jp>

	* unix/pandora_agent_installer: Fixed typo and directory permission
	for FreeBSD.
	
	* unix/FreeBSD/pandora_agent: Simplified.

2010-06-18  Ramon Novoa  <rnovoa@artica.es>
	
	* unix/pandora_exec: Added to repository. pandora_exec script.

	* unix/pandora_agent_installer, unix/DEBIAN/postinst,
	  unix/DEBIAN/make_deb_package.sh, unix/pandora_agent.spec: Added the
	  pandora_exec script to the installation.
